--- a/rxlifecycle/build.gradle
+++ b/rxlifecycle/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     provided "com.android.support:support-annotations:$SUPPORT_LIBS_VERSION"
     provided "io.reactivex.rxjava2:rxjava:$RXJAVA2_VERSION"
+    provided "com.android.support:appcompat-v7:$SUPPORT_LIBS_VERSION"
+    provided "com.android.support:support-v4:$SUPPORT_LIBS_VERSION"
 }
 
 // build a jar with source files
